# code-debugger-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  client.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sim.py  tasks.py
server/: __init__.py  app.py  environment.py  grader.py  tasks.py
tests/: test_environment.py
