[project]
name = "code-debugger-env"
version = "1.1.0"
description = "BugHunterRL — Python Code Debugger OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2",
    "openai>=1.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = [
    "__init__.py",
    "models.py",
    "client.py",
    "server/*.py",
    "tests/*.py",
    "inference.py",
    "openenv.yaml",
    "README.md",
]
